# flask_go2rtc

./: .pdm-python  Dockerfile  README.md  app.py  docker-compose.yml  go2rtc.yaml  gunicorn.conf.py  pyproject.toml
templates/: index.html
