[project]
name = "miniapp"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ryan", email = "150310208+berserkduck@users.noreply.github.com"},
]
dependencies = ["flask>=3.1.3", "requests>=2.33.1", "gunicorn>=25.3.0", "gevent>=26.4.0"]
requires-python = "==3.14.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
